Fix smoketest blocker bug 93558 by modifying the fix for bug 70258 since different XUL documents can have different frame structures between the root element's primary frame and the RootBoxFrame.  r=jst  sr=waterson